almost figured out direct link

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,7 +30,7 @@ layout: default
           {% if page.read_time %}
             <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
           {% endif %}
-		  <a href="https://github.com/cbarina/rexpat/blob/master/{{ page.path }}">Edit this page!</a>
+		  <p class="page_meta"><a href="https://github.com/cbarina/rexpat/blob/master/{{ page.path }}">Edit this page!</a></p>
         </header>
       {% endunless %}
 
