--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,10 +27,11 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          {% if page.read_time %}
-            <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+          <p class="page_meta">
+		  {% if page.read_time %}
+			<i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %} | 
           {% endif %}
-		  <p class="page_meta"><a href="https://github.com/cbarina/rexpat/blob/master/{{ page.path }}">Edit this page!</a></p>
+		  <a href="https://github.com/cbarina/rexpat/blob/master/{{ page.path }}">Edit this page!</a></p>
         </header>
       {% endunless %}
 
