--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,14 +27,11 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          <p class="page_meta">
-		  {% if page.read_time %}
-			<i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %} | 
+          {% if page.read_time %}
+            <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %} | <a href="https://github.com/cbarina/rexpat/blob/master/{{ page.path }}" target="_blank">Edit this page</a></p>
           {% endif %}
-		  <a href="https://github.com/cbarina/rexpat/blob/master/{{ page.path }}">Edit this page!</a></p>
         </header>
       {% endunless %}
-
       <section class="page__content" itemprop="text">
         {% if page.toc %}
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
