--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,10 +7,11 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-@media (min-width: 80em)
+@media (min-width: 80em) {
 .sidebar__right {
     width: 300px;
     margin-right: -300px;
     float: right;
     position: sticky;
+}
 }
